# OOP_practica

./: .flake8  .gitignore  pyproject.toml
OOP_practica/: pyproject.toml
OOP_practica/src/: main.py  utils.py
OOP_practica/tests_OOP_practica/: test_classes.py  test_utils.py
SkyPro_14_1/: SkyPro_14_1_4_Inicializaciy.py  SkyPro_14_1_5_Nasledovanie.py  SkyPro_14_1_5_Polimorfizm.py  SkyPro_14_1_6_Testirovanie.py
SkyPro_14_1/tests_14_1_6/: test_SkyPro_14_1_6_Testirovanie.py
SkyPro_14_1_9_Zadachya/src/: _zadachya.py  task.py  user.py  utils.py
SkyPro_14_1_9_Zadachya/tests/: conftest.py  test_task.py  test_user.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_e382a2f455d70720___init___py.html  z_e382a2f455d70720_classes_py.html  z_e382a2f455d70720_main_py.html  z_e382a2f455d70720_utils_py.html
oop_additional_tasks/: .gitignore
oop_additional_tasks/lesson1/: albums.py  bottle.py  number.py  students.py
oop_additional_tasks/lesson2/: bankaccount.py  person.py  rectangle.py  user.py
oop_additional_tasks/lesson3/: counter.py  fraction.py  logger.py  mylist.py  mylist2.py  point.py  timer.py
oop_additional_tasks/lesson4/: animal.py  animal_2.py  car.py  employee.py  employee_2.py  person.py  shape.py
oop_additional_tasks/lesson5/: bird.py  cars.py  person.py  student.py
oop_additional_tasks/lesson6/: cars.py  employee.py  student.py
project_Home_14_1/: README.md
project_Home_14_1/src/: classes.py  main.py  utils.py
project_Home_14_1/tests/: test_classes.py  test_utils.py
src/: main.py
tests/: test_classes.py
