[project]
name = "oop-practica"
version = "0.1.0"
description = ""
authors = [
    {name = "konstantin",email = "kostyani4y@yandex.ru"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]

# конфиг для mypy проверять только проект
[tool.mypy]
files = "project_Home_14_1"
explicit_package_bases = true


# конфиг для black проверять только проект
[tool.black]
force-exclude = 'oop_additional_tasks|SkyPro_14_1|SkyPro_14_1_9_Zadachya'

